Прочитал Демон из Пустоши

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a226" src="jpg/graf_averin_3.jpg" title="Демон из Пустоши (аудиокнига)"></a></th>			
 <th><img src="jpg/graf_averin_2.jpg" title="Императорский Див"></th>	
 <th><a id="a225" src="jpg/100_med_rasskazov.jpg" title="100 рассказов из истории медицины (аудиокнига)"></a></th>			
 <th><img src="jpg/terry_goodkind_19.jpg" title="Сердце из черного льда"></th>
@@ -1080,7 +1081,6 @@
 <th colspan="4"><h4><a href="https://flibusta.is/a/68842"> Гулд Стивен</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/32560"> Гэйл Боб</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/2202">  Дайдодзи Юдзан</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/218814">Дашкевич Виктор</a></h4></th>
 </tr><tr>
 <th><img src="jpg/jumper_0.jpg" title="Джампер"></th>
 <th><img src="jpg/jumper_1.jpg" title="Телепорт"></th>
@@ -1090,15 +1090,18 @@
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/bysido_1.jpg" title="Будосёсинсю"></th>
 <th><img src="jpg/0.jpg"></th>
-<th><img src="jpg/graf_averin_1.jpg" title="Граф Аверин"></th>	
-<th><img src="jpg/graf_averin_2.jpg" title="Императорский Див"></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="4"><h4><a href="https://flibusta.is/a/218814">Дашкевич Виктор</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/165262">Дашко Дмитрий</a></h4></th>
 </tr><tr></tr>
+<th><img src="jpg/graf_averin_1.jpg" title="Граф Аверин"></th>	
+<th><img src="jpg/graf_averin_2.jpg" title="Императорский Див"></th>
+<th><a id="a226" src="jpg/graf_averin_3.jpg" title="Демон из Пустоши (аудиокнига)"></a></th>
+<th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/magic_sled.jpg" title="Тайны магического следствия"></th>
 <th><img src="jpg/0.jpg"></th>
 </tr></table>
