--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+		<th><img src="data/10.2025.jpg"></th>
 <th><a id="a226" src="jpg/graf_averin_3.jpg" title="Демон из Пустоши (аудиокнига)"></a></th>			
 <th><img src="jpg/graf_averin_2.jpg" title="Императорский Див"></th>	
 <th><a id="a225" src="jpg/100_med_rasskazov.jpg" title="100 рассказов из истории медицины (аудиокнига)"></a></th>			
