Прочитал Тайна мертвого ректора

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a227" src="jpg/graf_averin_4.jpg" title="Тайна мертвого ректора (аудиокнига)"></a></th>
 		<th><img src="data/10.2025.jpg"></th>
 <th><a id="a226" src="jpg/graf_averin_3.jpg" title="Демон из Пустоши (аудиокнига)"></a></th>			
 <th><img src="jpg/graf_averin_2.jpg" title="Императорский Див"></th>	
@@ -1096,12 +1097,13 @@
 
 
 <table><tr align="left"> 
-<th colspan="4"><h4><a href="https://flibusta.is/a/218814">Дашкевич Виктор</a></h4></th>
+<th colspan="5"><h4><a href="https://flibusta.is/a/218814">Дашкевич Виктор</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/165262">Дашко Дмитрий</a></h4></th>
 </tr><tr></tr>
 <th><img src="jpg/graf_averin_1.jpg" title="Граф Аверин"></th>	
 <th><img src="jpg/graf_averin_2.jpg" title="Императорский Див"></th>
 <th><a id="a226" src="jpg/graf_averin_3.jpg" title="Демон из Пустоши (аудиокнига)"></a></th>
+<th><a id="a227" src="jpg/graf_averin_4.jpg" title="Тайна мертвого ректора (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/magic_sled.jpg" title="Тайны магического следствия"></th>
 <th><img src="jpg/0.jpg"></th>
