Прочитал 45 татуировок личности

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/45_taty_lichnosti.jpg" title="45 татуировок личности"></th>
 <th><a id="a227" src="jpg/graf_averin_4.jpg" title="Тайна мертвого ректора (аудиокнига)"></a></th>
 		<th><img src="data/10.2025.jpg"></th>
 <th><a id="a226" src="jpg/graf_averin_3.jpg" title="Демон из Пустоши (аудиокнига)"></a></th>			
@@ -697,12 +698,13 @@
 
 
 <table><tr align="left"> 
-<th colspan="2"><h4><a href="http://flibusta.is/a/208731">Батырев Максим</a></h4></th>
+<th colspan="3"><h4><a href="http://flibusta.is/a/208731">Батырев Максим</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/149766">Белоусова Татьяна</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/32388"> Беннет Арнольд</a></h4></th>
 <th colspan="3"><h4><a href="http://flibusta.is/a/215022">Белинг Стив</a></h4></th>
 </tr><tr>
 <th><a id="a18" src="jpg/45_taty.jpg" title="45 татуировок менеджера (аудиокнига)"></a></th>
+<th><img src="jpg/45_taty_lichnosti.jpg" title="45 татуировок личности"></th>
 <th><img src="jpg/0.jpg"></th>	
 <th><img src="jpg/etiket_1.jpg" title="Этикет. Полный свод правил светского и делового общения"></th>
 <th><img src="jpg/0.jpg"></th>
