Прочитал Дела Тайной канцелярии

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a228" src="jpg/graf_averin_01.jpg" title="Дела Тайной канцелярии (аудиокнига)"></a></th>	
 <th><img src="jpg/45_taty_lichnosti.jpg" title="45 татуировок личности"></th>
 <th><a id="a227" src="jpg/graf_averin_4.jpg" title="Тайна мертвого ректора (аудиокнига)"></a></th>
 		<th><img src="data/10.2025.jpg"></th>
@@ -1099,9 +1100,10 @@
 
 
 <table><tr align="left"> 
-<th colspan="5"><h4><a href="https://flibusta.is/a/218814">Дашкевич Виктор</a></h4></th>
+<th colspan="6"><h4><a href="https://flibusta.is/a/218814">Дашкевич Виктор</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/165262">Дашко Дмитрий</a></h4></th>
 </tr><tr></tr>
+<th><a id="a228" src="jpg/graf_averin_01.jpg" title="Дела Тайной канцелярии (аудиокнига)"></a></th>	
 <th><img src="jpg/graf_averin_1.jpg" title="Граф Аверин"></th>	
 <th><img src="jpg/graf_averin_2.jpg" title="Императорский Див"></th>
 <th><a id="a226" src="jpg/graf_averin_3.jpg" title="Демон из Пустоши (аудиокнига)"></a></th>
