--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a230" src="jpg/revizor_2.jpg" title="Ревизор. Возвращение в СССР #2 (аудиокнига)"></a></th>	
 <th><a id="a229" src="jpg/revizor_1.jpg" title="Ревизор. Возвращение в СССР #1 (аудиокнига)"></a></th>	
 <th><a id="a228" src="jpg/graf_averin_01.jpg" title="Дела Тайной канцелярии (аудиокнига)"></a></th>	
 <th><img src="jpg/45_taty_lichnosti.jpg" title="45 татуировок личности"></th>
@@ -855,7 +856,7 @@
 
 <table><tr align="left"> 
 <th colspan="3"><h4>									  Ветошкина Галина</h4></th>
-<th colspan="2"><h4><a href="http://flibusta.is/a/210540">Винтеркей Серж</a></h4></th>
+<th colspan="3"><h4><a href="http://flibusta.is/a/210540">Винтеркей Серж</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/24193"> Войнович Владимир</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/184698">Волков Алексей</a></h4></th>
 </tr><tr>
@@ -863,6 +864,7 @@
 <th><img src="jpg/dodo_kniga_2.jpg" title="Додо книга 2"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a229" src="jpg/revizor_1.jpg" title="Ревизор. Возвращение в СССР #1 (аудиокнига)"></a></th>	
+<th><a id="a230" src="jpg/revizor_2.jpg" title="Ревизор. Возвращение в СССР #2 (аудиокнига)"></a></th>	
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a224" src="jpg/ivan_chonkin.jpg" title="Жизнь и необычайные приключения солдата Ивана Чонкина. Книга 1-3"></a></th>			
 <th><img src="jpg/0.jpg"></th>
