Прочитал Возвращение в СССР #4

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a232" src="jpg/revizor_4.jpg" title="Ревизор. Возвращение в СССР #4 (аудиокнига)"></a></th>	
 <th><a id="a231" src="jpg/revizor_3.jpg" title="Ревизор. Возвращение в СССР #3 (аудиокнига)"></a></th>	
 <th><a id="a230" src="jpg/revizor_2.jpg" title="Ревизор. Возвращение в СССР #2 (аудиокнига)"></a></th>	
 <th><a id="a229" src="jpg/revizor_1.jpg" title="Ревизор. Возвращение в СССР #1 (аудиокнига)"></a></th>	
@@ -865,6 +866,7 @@
 <th><a id="a229" src="jpg/revizor_1.jpg" title="Ревизор. Возвращение в СССР #1 (аудиокнига)"></a></th>	
 <th><a id="a230" src="jpg/revizor_2.jpg" title="Ревизор. Возвращение в СССР #2 (аудиокнига)"></a></th>
 <th><a id="a231" src="jpg/revizor_3.jpg" title="Ревизор. Возвращение в СССР #3 (аудиокнига)"></a></th>	
+<th><a id="a232" src="jpg/revizor_4.jpg" title="Ревизор. Возвращение в СССР #4 (аудиокнига)"></a></th>
 </tr></table>
 
 
