Прочитал Возвращение в СССР #6

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a234" src="jpg/revizor_6.jpg" title="Ревизор. Возвращение в СССР #6 (аудиокнига)"></a></th>
 <th><a id="a233" src="jpg/revizor_5.jpg" title="Ревизор. Возвращение в СССР #5 (аудиокнига)"></a></th>
 <th><a id="a232" src="jpg/revizor_4.jpg" title="Ревизор. Возвращение в СССР #4 (аудиокнига)"></a></th>	
 <th><a id="a231" src="jpg/revizor_3.jpg" title="Ревизор. Возвращение в СССР #3 (аудиокнига)"></a></th>	
@@ -869,6 +870,7 @@
 <th><a id="a231" src="jpg/revizor_3.jpg" title="Ревизор. Возвращение в СССР #3 (аудиокнига)"></a></th>	
 <th><a id="a232" src="jpg/revizor_4.jpg" title="Ревизор. Возвращение в СССР #4 (аудиокнига)"></a></th>
 <th><a id="a233" src="jpg/revizor_5.jpg" title="Ревизор. Возвращение в СССР #5 (аудиокнига)"></a></th>
+<th><a id="a234" src="jpg/revizor_6.jpg" title="Ревизор. Возвращение в СССР #6 (аудиокнига)"></a></th>
 </tr></table>
 
 
