Прочитал Возвращение в СССР #7

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a235" src="jpg/revizor_7.jpg" title="Ревизор. Возвращение в СССР #7 (аудиокнига)"></a></th>
 <th><a id="a234" src="jpg/revizor_6.jpg" title="Ревизор. Возвращение в СССР #6 (аудиокнига)"></a></th>
 <th><a id="a233" src="jpg/revizor_5.jpg" title="Ревизор. Возвращение в СССР #5 (аудиокнига)"></a></th>
 <th><a id="a232" src="jpg/revizor_4.jpg" title="Ревизор. Возвращение в СССР #4 (аудиокнига)"></a></th>	
@@ -871,6 +872,7 @@
 <th><a id="a232" src="jpg/revizor_4.jpg" title="Ревизор. Возвращение в СССР #4 (аудиокнига)"></a></th>
 <th><a id="a233" src="jpg/revizor_5.jpg" title="Ревизор. Возвращение в СССР #5 (аудиокнига)"></a></th>
 <th><a id="a234" src="jpg/revizor_6.jpg" title="Ревизор. Возвращение в СССР #6 (аудиокнига)"></a></th>
+<th><a id="a235" src="jpg/revizor_7.jpg" title="Ревизор. Возвращение в СССР #7 (аудиокнига)"></a></th>
 </tr></table>
 
 
