--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a240" src="jpg/revizor_12.jpg" title="Ревизор. Возвращение в СССР #12 (аудиокнига)"></a></th>		
 <th><a id="a239" src="jpg/revizor_11.jpg" title="Ревизор. Возвращение в СССР #11 (аудиокнига)"></a></th>
 <th><a id="a238" src="jpg/revizor_10.jpg" title="Ревизор. Возвращение в СССР #10 (аудиокнига)"></a></th>
 <th><a id="a237" src="jpg/revizor_9.jpg" title="Ревизор. Возвращение в СССР #9 (аудиокнига)"></a></th>
@@ -887,7 +888,7 @@
 <th><a id="a237" src="jpg/revizor_9.jpg" title="Ревизор. Возвращение в СССР #9 (аудиокнига)"></a></th>
 <th><a id="a238" src="jpg/revizor_10.jpg" title="Ревизор. Возвращение в СССР #10 (аудиокнига)"></a></th> </tr>
 <tr> <th><a id="a239" src="jpg/revizor_11.jpg" title="Ревизор. Возвращение в СССР #11 (аудиокнига)"></a></th>
-
+<th><a id="a240" src="jpg/revizor_12.jpg" title="Ревизор. Возвращение в СССР #12 (аудиокнига)"></a></th>	
 </tr></table>
 
 
