--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a242" src="jpg/revizor_14.jpg" title="Ревизор. Возвращение в СССР #14 (аудиокнига)"></a></th>
 <th><a id="a241" src="jpg/revizor_13.jpg" title="Ревизор. Возвращение в СССР #13 (аудиокнига)"></a></th>	
 <th><a id="a240" src="jpg/revizor_12.jpg" title="Ревизор. Возвращение в СССР #12 (аудиокнига)"></a></th>		
 <th><a id="a239" src="jpg/revizor_11.jpg" title="Ревизор. Возвращение в СССР #11 (аудиокнига)"></a></th>
@@ -891,6 +892,7 @@
 <tr> <th><a id="a239" src="jpg/revizor_11.jpg" title="Ревизор. Возвращение в СССР #11 (аудиокнига)"></a></th>
 <th><a id="a240" src="jpg/revizor_12.jpg" title="Ревизор. Возвращение в СССР #12 (аудиокнига)"></a></th>
 <th><a id="a241" src="jpg/revizor_13.jpg" title="Ревизор. Возвращение в СССР #13 (аудиокнига)"></a></th>	
+<th><a id="a242" src="jpg/revizor_14.jpg" title="Ревизор. Возвращение в СССР #14 (аудиокнига)"></a></th>
 </tr></table>
 
 
