Прочитал 45 татуировок менеджера

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
 <th><a id="a247" src="jpg/revizor_19.jpg" title="Ревизор. Возвращение в СССР #19 (аудиокнига)"></a></th>
 <th><a id="a246" src="jpg/revizor_18.jpg" title="Ревизор. Возвращение в СССР #18 (аудиокнига)"></a></th>
-
+<th><img src="jpg/45_taty.jpg" title="45 татуировок менеджера"></th>
 <th><img src="jpg/na_igle.jpg" title="На порноигле"></th>
 <th><a id="a245" src="jpg/revizor_17.jpg" title="Ревизор. Возвращение в СССР #17 (аудиокнига)"></a></th>
 <th><a id="a244" src="jpg/revizor_16.jpg" title="Ревизор. Возвращение в СССР #16 (аудиокнига)"></a></th>
@@ -725,7 +725,7 @@
 <th colspan="2"><h4><a href="http://flibusta.is/a/32388"> Беннет Арнольд</a></h4></th>
 <th colspan="3"><h4><a href="http://flibusta.is/a/215022">Белинг Стив</a></h4></th>
 </tr><tr>
-<th><a id="a18" src="jpg/45_taty.jpg" title="45 татуировок менеджера (аудиокнига)"></a></th>
+<th><img src="jpg/45_taty.jpg" title="45 татуировок менеджера"></th>
 <th><img src="jpg/45_taty_lichnosti.jpg" title="45 татуировок личности"></th>
 <th><img src="jpg/0.jpg"></th>	
 <th><img src="jpg/etiket_1.jpg" title="Этикет. Полный свод правил светского и делового общения"></th>
