--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+		<th><img src="data/11.2025.jpg"></th>
 <th><a id="a247" src="jpg/revizor_19.jpg" title="Ревизор. Возвращение в СССР #19 (аудиокнига)"></a></th>
 <th><a id="a246" src="jpg/revizor_18.jpg" title="Ревизор. Возвращение в СССР #18 (аудиокнига)"></a></th>
 <th><img src="jpg/45_taty.jpg" title="45 татуировок менеджера"></th>
