Прочитал Возвращение в СССР #20

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a248" src="jpg/revizor_20.jpg" title="Ревизор. Возвращение в СССР #20 (аудиокнига)"></a></th>		
 		<th><img src="data/11.2025.jpg"></th>
 <th><a id="a247" src="jpg/revizor_19.jpg" title="Ревизор. Возвращение в СССР #19 (аудиокнига)"></a></th>
 <th><a id="a246" src="jpg/revizor_18.jpg" title="Ревизор. Возвращение в СССР #18 (аудиокнига)"></a></th>
@@ -906,6 +907,7 @@
 <th><a id="a245" src="jpg/revizor_17.jpg" title="Ревизор. Возвращение в СССР #17 (аудиокнига)"></a></th>
 <th><a id="a246" src="jpg/revizor_18.jpg" title="Ревизор. Возвращение в СССР #18 (аудиокнига)"></a></th>
 <th><a id="a247" src="jpg/revizor_19.jpg" title="Ревизор. Возвращение в СССР #19 (аудиокнига)"></a></th>
+<th><a id="a248" src="jpg/revizor_20.jpg" title="Ревизор. Возвращение в СССР #20 (аудиокнига)"></a></th>	
 </tr></table>
 
 
