Прочитал Возвращение в СССР #23

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a251" src="jpg/revizor_23.jpg" title="Ревизор. Возвращение в СССР #23 (аудиокнига)"></a></th>
 <th><a id="a250" src="jpg/revizor_22.jpg" title="Ревизор. Возвращение в СССР #22 (аудиокнига)"></a></th>		
 <th><a id="a249" src="jpg/revizor_21.jpg" title="Ревизор. Возвращение в СССР #21 (аудиокнига)"></a></th>
 <th><a id="a248" src="jpg/revizor_20.jpg" title="Ревизор. Возвращение в СССР #20 (аудиокнига)"></a></th>		
@@ -912,6 +913,7 @@
 <th><a id="a248" src="jpg/revizor_20.jpg" title="Ревизор. Возвращение в СССР #20 (аудиокнига)"></a></th> </tr>
 <tr> <th><a id="a249" src="jpg/revizor_21.jpg" title="Ревизор. Возвращение в СССР #21 (аудиокнига)"></a></th>
 <th><a id="a250" src="jpg/revizor_22.jpg" title="Ревизор. Возвращение в СССР #22 (аудиокнига)"></a></th>
+<th><a id="a251" src="jpg/revizor_23.jpg" title="Ревизор. Возвращение в СССР #23 (аудиокнига)"></a></th>
 </tr></table>
 
 
