Добавил сворачиваемые таблицы

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
  
 
 
-	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<h4 id="recent-heading">Последние прочитанные книги:&nbsp;
+<button id="toggle-recent-2025">2025&nbsp;•</button><button id="toggle-recent-2024">2024&nbsp;•</button><button id="toggle-recent-2023">2023&nbsp;•</button><button id="toggle-recent-2022">2022&nbsp;•</button><button id="toggle-recent-2021">2021&nbsp;•</button><button id="toggle-recent-2020">2020</button></h4>
+<div id="recent-container-2025"><div id="block"><table id="recent-table-2025"><tr>
+	<th><img src="data/2025.jpg"></th>
+
 <th><a id="a251" src="jpg/revizor_23.jpg" title="Ревизор. Возвращение в СССР #23 (аудиокнига)"></a></th>
 <th><a id="a250" src="jpg/revizor_22.jpg" title="Ревизор. Возвращение в СССР #22 (аудиокнига)"></a></th>		
 <th><a id="a249" src="jpg/revizor_21.jpg" title="Ревизор. Возвращение в СССР #21 (аудиокнига)"></a></th>
@@ -171,7 +175,9 @@
 <th><img src="jpg/new_pravila.jpg" title="Новые правила деловой переписки"></th> 
 <th><img src="jpg/witcher_10.jpg" title="Перекрёсток воронов"></th> 
 <th><img src="jpg/kogda_bogi_smeytca.jpg" title="Когда боги смеются"></th> 
-	<th><img src="data/01.2025.jpg"></th>
+	<th><img src="data/01.2025.jpg"></th></tr></table></div></div>
+<div id="recent-container-2024" class="hidden"><div id="block"><table id="recent-table-2024"><tr></tr>
+	<th><img src="data/2024.jpg"></th>
 <th><img src="jpg/pyaro_12.jpg" title="[Эркюль Пуаро #12] Убийства по алфавиту"></th>
 <th><a id="a168" src="jpg/metro_21.jpg" title="21. Сборник. Последнее убежище (аудиокнига)"></a></th>
 <th><img src="jpg/ironman.jpg" title="Ironman: история, а не истерия"></th>
@@ -275,7 +281,9 @@
 <th><a id="a124" src="jpg/klark_1.jpg" title="2001: Космическая одиссея (аудиокнига)"></a></th>			
 <th><a id="a123" src="jpg/don_kihot.jpg" title="Дон Кихот Ламанчский (аудиокнига)"></a></th>		
 <th><img src="jpg/dragon_age_2.jpg" title="Dragon Age. Призыв"></th>
-	<th><img src="data/01.2024.jpg"></th>
+	<th><img src="data/01.2024.jpg"></th></tr></table></div></div>
+<div id="recent-container-2023" class="hidden"><div id="block"><table id="recent-table-2023"><tr></tr>
+	<th><img src="data/2023.jpg"></th>
 <th><img src="jpg/slovo_pacana.jpg" title="Слово пацана. Криминальный Татарстан 1970–2010-х"></th>
 <th><img src="jpg/coca-cola.jpg" title="Внутри Coca-Cola. История бренда № 1 глазами легендарного CEO"></th>
 <th><img src="jpg/obnimi_menia.jpg" title="Обними меня крепче. 7 диалогов для любви на всю жизнь"></th>
@@ -348,7 +356,9 @@
 <th><img src="jpg/findraiv.jpg" title="Финдрайв: как привлечь, сохранить и выгодно вложить свои деньги"></th>
 <th><img src="jpg/magi_bez_vremeni.jpg" title="Маги без времени"></th>
 <th><img src="jpg/not_time_2.jpg" title="Не место для людей"></th>
-	<th><img src="data/01.2023.jpg"></th>
+	<th><img src="data/01.2023.jpg"></th></tr></table></div></div>
+<div id="recent-container-2022" class="hidden"><div id="block"><table id="recent-table-2022"><tr></tr>
+	<th><img src="data/2022.jpg"></th>
 <th><img src="jpg/not_time_1.jpg" title="Не время для драконов"></th>
 <th><img src="jpg/sex_intel.jpg" title="Сексуальный интеллект"></th>
 <th><img src="jpg/linia_grez_3.jpg" title="Тени снов"></th>
@@ -416,7 +426,9 @@
 <th><a id="a83" src="jpg/kovi_1.jpg" title="Фокус: Достижение приоритетных целей (аудиокнига)"></th>
 <th><img src="jpg/jumper_0.jpg" title="Джампер"></th>
 <th><a id="a82" src="jpg/metro_10.jpg" title="Война кротов (аудиокнига)"></a></th>
-	<th><img src="data/01.2022.jpg"></th>
+	<th><img src="data/01.2022.jpg"></th></tr></table></div></div>
+<div id="recent-container-2021" class="hidden"><div id="block"><table id="recent-table-2021"><tr></tr>
+	<th><img src="data/2021.jpg"></th>
 <th><a id="a81" src="jpg/metro_9.jpg" title="В интересах революции (аудиокнига)"></a></th>
 <th><img src="jpg/alhimik.jpg" title="Алхимик"></th> 
 <th><a id="a80" src="jpg/labirint_otr_3.jpg" title="Прозрачные витражи (аудиокнига)"></th>
@@ -520,7 +532,9 @@
 <th><img src="jpg/konec_legendi.jpg" title="Конец легенды (Сборник): Кредо, Мой папа – антибиотик, Вкус свободы, Дорога на Веллесберг, Почти весна, Слуга, Плетельщица Снов, Поезд в Теплый Край, Проводник Отсюда, Конец легенды, Хозяин Дорог, Фугу в мундире, Девочка с китайскими зажигалками, Гаджет, От судьбы, Живи спокойно, Вся эта ложь, Не спешу, Последняя ночь колдуна"></th>
 <th><a id="a10" src="jpg/pyt_na100iaschego.jpg" title="Путь настоящего мужчины (аудиокнига)"></th>
 <th><img src="jpg/niro_wolf_1.jpg" title="Острие копья"></th>
-	<th><img src="data/01.2021.jpg"></th>
+	<th><img src="data/01.2021.jpg"></th></tr></table></div></div>
+<div id="recent-container-2020" class="hidden"><div id="block"><table id="recent-table-2020"><tr></tr>
+	<th><img src="data/2020.jpg"></th>
 <th><a id="a39" src="jpg/transformator_3.jpg" title="В чем сила, бро (аудиокнига)"></th>
 <th><img src="jpg/mass_effect_3.jpg" title="Возмездие"></th>
 <th><a id="a38" src="jpg/kak_coca_cola.jpg" title="Как Coca-Cola завоевала мир. 101 успешный кейс от брендов с мировым именем (аудиокнига)"></th>
@@ -616,8 +630,7 @@
 <th><img src="jpg/lesly_1.jpg" title="Жжизнь без трусов"></th>
 <th><img src="jpg/sherlok_1.jpg" title="Этюд в багровых тонах"></th>
 <th><img src="jpg/freid_1.jpg" title="Очерки по психологии сексуальности"></th>
-	<th><img src="data/01.2020.jpg"></th>
-</tr></table></div><table><tr><h4> </h4></tr></table> 
+	<th><img src="data/01.2020.jpg"></th></tr></table></div></div>
 
 
 
@@ -2523,4 +2536,4 @@
 <th><img src="jpg/python_3.jpg" title="Бэрри Пол - Изучаем программирование на Python"></th>
 <th><img src="jpg/algoritmi.jpg" title="Бхаргава Адитья - Грокаем алгоритмы"></th> 
 <th><img src="jpg/python_avto.jpg" title="Автоматизация рутинных задач с помощью Python"></th>
-</tr></table></div></div></body></html>
+</tr></table></div></div><script src="js/toggleRecent.js"></script></body></html>
