--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <div id="recent-container-2025"><div id="block"><table id="recent-table-2025"><tr>
 	<th><img src="data/2025.jpg"></th>
 
+<th><a id="a252" src="jpg/revizor_24.jpg" title="Ревизор. Возвращение в СССР #24 (аудиокнига)"></a></th>
 <th><a id="a251" src="jpg/revizor_23.jpg" title="Ревизор. Возвращение в СССР #23 (аудиокнига)"></a></th>
 <th><a id="a250" src="jpg/revizor_22.jpg" title="Ревизор. Возвращение в СССР #22 (аудиокнига)"></a></th>		
 <th><a id="a249" src="jpg/revizor_21.jpg" title="Ревизор. Возвращение в СССР #21 (аудиокнига)"></a></th>
@@ -927,6 +928,7 @@
 <tr> <th><a id="a249" src="jpg/revizor_21.jpg" title="Ревизор. Возвращение в СССР #21 (аудиокнига)"></a></th>
 <th><a id="a250" src="jpg/revizor_22.jpg" title="Ревизор. Возвращение в СССР #22 (аудиокнига)"></a></th>
 <th><a id="a251" src="jpg/revizor_23.jpg" title="Ревизор. Возвращение в СССР #23 (аудиокнига)"></a></th>
+<th><a id="a252" src="jpg/revizor_24.jpg" title="Ревизор. Возвращение в СССР #24 (аудиокнига)"></a></th>
 </tr></table>
 
 
